zeit.content.article changes
============================

3.6.14 (unreleased)
-------------------

- Nothing changed yet.


3.6.13 (2015-03-23)
-------------------

- Add ``commentsAllowed`` field to breaking news form (DEV-86).


3.6.12 (2015-03-18)
-------------------

- Adjust ReferenceFactory to new API of ElementFactory, which now accepts a new
  argument to insert at given position. (DEV-53)


3.6.11 (2015-03-13)
-------------------

- Use drag&drop sucess/failure API (DEV-60).


3.6.10 (2015-03-10)
-------------------

- Make search button styling work for centerpages, too (DEV-23).


3.6.9 (2015-02-16)
------------------

- Use readonly permission ``zeit.content.cp.ViewAutomatic`` (VIV-525).


3.6.8 (2015-01-12)
------------------

- Bugfix: Don't set has_last_semantic during publishing (VIV-534).


3.6.7 (2015-01-08)
------------------

- Extract body traverser mechanics to zeit.edit.


3.6.6 (2014-12-17)
------------------

- Fixed saving control when replacing text in editor.

- Update to API changes in zeit.cms, zeit.edit.


3.6.5 (2014-11-14)
------------------

- Set has_last_semantic for articles that contain liveblog blocks (VIV-534).

- Set default channels for CDS articles (VIV-547).

- Allow drag&drop of modules while in edit mode (VIV-405).

- When searching or replacing, ask to wrap around at end or beginning of text,
  resp. (VIV-10716).

- Fix validation rule that checks for unpublished images, which broke due to
  the introduction of reference objects for VIV-305.

- Use apply action from zope as hook instead of applyChanges hook that is not
  present in inline forms (VIV-516).

- Change shortcut for find/replace to Ctrl-Shift-F.


3.6.4 (2014-10-21)
------------------

- Don't display a retract button for breaking news banners that don't belong to
  the current article (VIV-532).

- Fix CSS bug that caused "new filename" input field to be wrongly positioned
  (VIV-530).

- Extract social media form to zeit.push (VIV-516).

