@@ -4,7 +4,8 @@ zeit.content.article changes
 3.6.14 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Update content-to-module adapters to accept a position, since landing zones
+  work with insert instead of add+updateOrder since zeit.edit-2.11 (DEV-53).
 
 
 3.6.13 (2015-03-23)
